Adjusted exception message for LocalClass instantiation attempt.